--- a/Aula05/index.html
+++ b/Aula05/index.html
@@ -89,23 +89,55 @@
         </tr>
         <tr>
             <th rowspan="5">florianopolis</th>
-            <td>8:00</td>
-            <td>catarinense</td>
+            <td>6:50</td>
+            <td>Catarinense</td>
             <td> <img src="https://static.clickbus.com/live/travel-company-logos/catarinense.svg"></td>
-            <td>chapeco</td>
-            <td>$</td>
+            <td>Sao Paulo, SP - Tiete</td>
+            <td>$179,99</td>
             <td>comum</td>
         </tr>
         <tr>
             <td>8:00</td>
-            <td>catarinense</td>
-            <td> <img src="https://static.clickbus.com/live/travel-company-logos/catarinense.svg"></td>
-            <td>chapeco</td>
-            <td>$</td>
-            <td>comum</td>
+            <td>Eucatur</td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/eucatur.svg"></td>
+            <td>Curitiba, PR</td>
+            <td>$167,96</td>
+            <td>Convencional</td>
+        </tr>
+        <tr>
+            <td>5:20</td>
+            <td>Reunidas</td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/reunidas.svg"></td>
+            <td>Itajai, SC</td>
+            <td>$42,13</td>
+            <td>Semi Direto</td>
+        </tr>
+        <tr>
+            <td>1:00</td>
+            <td>Nordeste</td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/expresso-nordeste.svg"></td>
+            <td>Porto Alegre, RS - Estacao</td>
+            <td>$100,99</td>
+            <td>Cabine Cama</td>
+        </tr>
+        <tr>
+            <td>8:15</td>
+            <td>Nordeste</td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/uniao.svg"></td>
+            <td>Tubarao, SC</td>
+            <td>$58,51</td>
+            <td>Convencional</td>
         </tr>
 
     </table>
+</div>
+<br>
+<h3>Musiquinha</h3>
+<div>
+        <audio controls>
+            <source src="audios/Veigh - Engana Dizendo Que Ama.mp3" type="audio/mp3">
+        </audio>
+
 </div>
 
 </body>
