Arrumando horario de segunda-feira

--- a/Aula05/index.html
+++ b/Aula05/index.html
@@ -39,7 +39,7 @@
         </tr>
         <tr>
             <th>18:30</th>
-            <td></td>
+            <td>livre</td>
             <td>Frontend I</td>
             <td>Atividade extensão</td>
             <td>livre</td>
@@ -47,7 +47,7 @@
         </tr>
         <tr>
             <th>18:30</th>
-            <td></td>
+            <td>livre</td>
             <td>Frontend I</td>
             <td>Atividade extensão</td>
             <td>livre</td>
@@ -55,7 +55,7 @@
         </tr>
         <tr>
             <th>18:30</th>
-            <td></td>
+            <td>livre</td>
             <td>POO</td>
             <td>Atividade extensão</td>
             <td>Matematica</td>
@@ -63,7 +63,7 @@
         </tr>
         <tr>
             <th>18:30</th>
-            <td> </td>
+            <td>livre</td>
             <td>POO</td>
             <td>Atividade extensão</td>
             <td>Matematica</td>
