--- a/exercicio03/index.html
+++ b/exercicio03/index.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Enzo Fagundes Barbi</h1>
         <p>Sou o Enzo, Após a minha formatura pretendo me tornar um bom Dev que consiga resolver problemas onde for que seja solicitado, porque pra mim, isso que é ser um bom desenvolvedor.</p>
-        <img style="height: 375px;" width="750px" ;  src="images/programacao.jpg" alt="programacao">
+        <img style="height: 375px;" width="750px;" src="images/programacao.jpg" alt="programacao">
     </header>
     <section>
         <p>Lista ordenada</p>
@@ -61,7 +61,7 @@
         <dl>
             <dt>
                 FUNDAMENTOS DA MATEMÁTICA
-                <dd><a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4874912A2&tokenCaptchar=03AFcWeA40DKN40yaxMYsjEdWUmAKObAiBF5pGnAtsj8K2CW6JYogRmrW4iuzP1bW0hR5fw-Np1qYaDOBUkqUA84XQUla5KFRrrQx56gq-C0hT8v103YnjNwo-SOYNhVh5J_5ACRSZKgoOXGZ-t8tiUQJ2Kq5pCdX-hve_dLregSZnuYb79OMMvSMr2x1fAUV5RO1Jj_xS8Zewlsy9IOUJ0aCzVeug-cB9Jg8LU4BYue2GMjTc2K6E1q7XaIG0AxNb46-gEIX1nDYHy8qA5zH8LC8cr63Ts-ai39MKNZEIPyFs_7juDCR4jRyrAVtZhLRw2Y1q7E-w53qPuNYfJxvno5GoClN9bdCRCD4-PdXpWkesf83onTKP3GkX576BQPLRWzpIAhuyljFq1fyxntyNgCykQDaK88CdPQnToHSU9w6O-Ls7e-0Ow713Jlv2q9Mpgz9QzWgCBTkf8PGD8Yt7c4ZAQOxEK0uMmNk0IGwW4xCntbGFARzkBxfRUxSws-pLekIguTByWRUXHN6NmsoyThcEC3by9EjTm3oQapWMEy1K5cnbzssFwSb9ekLB40B2DGATcSaKAIsvdKXxHqMJ035_dlnxM7A3qFhTBT9DmjIGB7eqVQWCevVFajYUeeMmKE-Z0secjsDPwAVWWf-qRx5BnpOmxN2Id4VhqQp86719qQTSDIPIQm1TY8-NSAof6jZ9rfQvFUA4byFV9YRmhIrJ3I3wpJ-gP54BxxAh8fnqKhOfBSvqwwM" target="_blank">Jadina</dd>
+                <dd><a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4874912A2&tokenCaptchar=03AFcWeA40DKN40yaxMYsjEdWUmAKObAiBF5pGnAtsj8K2CW6JYogRmrW4iuzP1bW0hR5fw-Np1qYaDOBUkqUA84XQUla5KFRrrQx56gq-C0hT8v103YnjNwo-SOYNhVh5J_5ACRSZKgoOXGZ-t8tiUQJ2Kq5pCdX-hve_dLregSZnuYb79OMMvSMr2x1fAUV5RO1Jj_xS8Zewlsy9IOUJ0aCzVeug-cB9Jg8LU4BYue2GMjTc2K6E1q7XaIG0AxNb46-gEIX1nDYHy8qA5zH8LC8cr63Ts-ai39MKNZEIPyFs_7juDCR4jRyrAVtZhLRw2Y1q7E-w53qPuNYfJxvno5GoClN9bdCRCD4-PdXpWkesf83onTKP3GkX576BQPLRWzpIAhuyljFq1fyxntyNgCykQDaK88CdPQnToHSU9w6O-Ls7e-0Ow713Jlv2q9Mpgz9QzWgCBTkf8PGD8Yt7c4ZAQOxEK0uMmNk0IGwW4xCntbGFARzkBxfRUxSws-pLekIguTByWRUXHN6NmsoyThcEC3by9EjTm3oQapWMEy1K5cnbzssFwSb9ekLB40B2DGATcSaKAIsvdKXxHqMJ035_dlnxM7A3qFhTBT9DmjIGB7eqVQWCevVFajYUeeMmKE-Z0secjsDPwAVWWf-qRx5BnpOmxN2Id4VhqQp86719qQTSDIPIQm1TY8-NSAof6jZ9rfQvFUA4byFV9YRmhIrJ3I3wpJ-gP54BxxAh8fnqKhOfBSvqwwM" target="_blank"></a>Jadina</dd>
             </dt>
         </dl>
         <hr>
