--- a/exercicio04/index.html
+++ b/exercicio04/index.html
@@ -91,7 +91,7 @@
             <th rowspan="5">florianopolis</th>
             <td>6:50</td>
             <td>Catarinense</td>
-            <td> <img src="https://static.clickbus.com/live/travel-company-logos/catarinense.svg"></td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/catarinense.svg" alt="catarinense"></td>
             <td>Sao Paulo, SP - Tiete</td>
             <td>$179,99</td>
             <td>comum</td>
@@ -99,7 +99,7 @@
         <tr>
             <td>8:00</td>
             <td>Eucatur</td>
-            <td> <img src="https://static.clickbus.com/live/travel-company-logos/eucatur.svg"></td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/eucatur.svg" alt="eucatur"></td>
             <td>Curitiba, PR</td>
             <td>$167,96</td>
             <td>Convencional</td>
@@ -107,7 +107,7 @@
         <tr>
             <td>5:20</td>
             <td>Reunidas</td>
-            <td> <img src="https://static.clickbus.com/live/travel-company-logos/reunidas.svg"></td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/reunidas.svg" alt="imagem reunidas"></td>
             <td>Itajai, SC</td>
             <td>$42,13</td>
             <td>Semi Direto</td>
@@ -115,7 +115,7 @@
         <tr>
             <td>1:00</td>
             <td>Nordeste</td>
-            <td> <img src="https://static.clickbus.com/live/travel-company-logos/expresso-nordeste.svg"></td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/expresso-nordeste.svg" alt="imagem expresso-nordeste"></td>
             <td>Porto Alegre, RS - Estacao</td>
             <td>$100,99</td>
             <td>Cabine Cama</td>
@@ -123,7 +123,7 @@
         <tr>
             <td>8:15</td>
             <td>Nordeste</td>
-            <td> <img src="https://static.clickbus.com/live/travel-company-logos/uniao.svg"></td>
+            <td> <img src="https://static.clickbus.com/live/travel-company-logos/uniao.svg" alt="imagem uniao"></td>
             <td>Tubarao, SC</td>
             <td>$58,51</td>
             <td>Convencional</td>
@@ -135,7 +135,7 @@
 <h3>Musiquinha</h3>
 <div>
         <audio controls>
-            <source src="audios/Veigh - Engana Dizendo Que Ama.mp3" type="audio/mp3">
+            <source src="audios/Veigh - Engana Dizendo Que Ama.mp3" type="audio/mp3" >
         </audio>
 
 </div>
