--- a/exercicio07/index.html
+++ b/exercicio07/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Enzo Fagundes Barbi</title>
 </head>
 <body>
-    
+    <div id="container" class="container-flex">
+        <div class="coluna">
+            <ul>
+                <li>Maze Runner</li>
+                <li>One Piece</li>
+                <li>Barbie</li>
+                <li>Harry Potter</li>
+                <li>Marley e eu</li>
+                <li>Velozes e furiosos</li>
+                <li>Vingadores</li>
+                <li>Batman</li>
+                <li>Oppenheimer</li>
+                <li>Gente grande</li>
+                <li>Coringa</li>
+            </ul>
+        </div>
+        <div class="coluna">
+            <img src="images/academia.jpeg" alt="academia" class="imagem">
+            <img src="images/basquete.jpeg" alt="basquete" class="imagem">
+            <img src="images/caminhar.png" alt="caminhar" class="imagem">
+            <img src="images/cinema.jpeg" alt="cinema" class="imagem">
+            <img src="images/fofocar.jpg" alt="fofocar" class="imagem">
+            <img src="images/fute.jpeg" alt="futebol" class="imagem">
+            <img src="images/jogar.png" alt="jogar" class="imagem">
+            <img src="images/ler.jpg" alt="ler" class="imagem">
+            <img src="images/python.jpeg" alt="codar" class="imagem">
+            <img src="images/sushi.jpg" alt="sushi" class="imagem">
+            <img src="images/volei.jpg" alt="volei" class="imagem">
+        </div>        
+        <div class="coluna">
+            <ul>
+                <li>Youtube</li>
+                <li>ChatGPT</li>
+                <li>Alura</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
