--- a/exercicio07/index.html
+++ b/exercicio07/index.html
@@ -23,7 +23,7 @@
                 <li>Coringa</li>
             </ul>
         </div>
-        <div class="coluna">
+        <div class="coluna coluna-imagem"> 
             <img src="images/academia.jpeg" alt="academia" class="imagem">
             <img src="images/basquete.jpeg" alt="basquete" class="imagem">
             <img src="images/caminhar.png" alt="caminhar" class="imagem">
